Nodemailer : setup nodemailer with multer for manage attachements

--- a/test.html
+++ b/test.html
@@ -8,13 +8,11 @@
 </head>
 <body>
  
-<div style="border: 1px solid black; border-radius: 5px; padding-bottom: 1em;">
-<h1 style="color: rgb(65, 65, 236); text-align: center;">Adresse e-mail expéditrice : </h1> <br>
+<div style="border: 1px solid rgb(204, 206, 185); border-radius: 5px; padding-bottom: 1em; background-color: #6e6565; color: white;">
+<h1 style="color: rgb(204, 206, 185); text-align: center;">Adresse e-mail expéditrice : </h1> <br>
 <div style="font-size: 1.2em; text-align: center;">${req.body.userMail}</div>
-</div>
 <br>
-<div style="border: 1px solid black; border-radius: 5px; padding-bottom: 1em;">
-<h1 style="color: rgb(65, 65, 236); text-align: center;">Message de Mr/Mme ${firstName} ${lastName}</h1> <br>
+<h1 style="color: rgb(204, 206, 185); text-align: center;">Message de Mr/Mme ${firstName} ${lastName}</h1> <br>
 <div style="font-size: 1.2em; text-align: center;">${req.body.message}</div>
 </div>
 </body>
